# swagger-output.json
@@ -31,7 +31,7 @@
         }
       }
     },
-    "/reindeers": {
+    "/reindeers/": {
       "get": {
         "description": "",
         "responses": {
@@ -83,6 +83,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       },
